<resources>
    <string name="app_name">Chat Box</string>
    <string name="Full_name">Full_name</string>
    <string name="Phone">phone</string>
    <string name="email">email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="online">Online</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="profile">Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="share">Share</string>
    <string name="about_us">About Us</string>
    <string name="others">others</string>
    <string name="home">Home</string>
    <string name="type_a_message">Type a message...</string>
    <string name="todo">TODO</string>
</resources>