<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.chatbox.ui.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/profile"
        android:name="com.example.chatbox.ui.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/activity_profile" />
    <fragment
        android:id="@+id/signout"
        android:name="com.example.chatbox.ui.SignOutFragment"
        android:label="@string/sign_out" />
    <fragment
        android:id="@+id/share"
        android:name="com.example.chatbox.ui.ShareFragment"
        android:label="@string/share"/>
    <fragment
        android:id="@+id/aboutus"
        android:name="com.example.chatbox.ui.AboutUsFragment"
        android:label="@string/about_us"/>

</navigation>